--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+
+body {
+  background: linear-gradient(240deg, rgb(255, 253, 234), rgb(237, 247, 250), rgb(255, 238, 238));
+}
+
+.container {
+  margin: auto;
+  width: 50%;
+  border: rgb(243, 255, 255) solid 5px;
+  border-radius: 10px;
+  box-shadow: 0px 30px 45px -40px rgba(0, 0, 0, 0.85);
+  padding: 30px 20px;
+  background-color: rgb(255, 255, 255);
+  padding: 100px auto;
+}
+
 h1 {
     text-align: center;
   }
@@ -11,36 +27,49 @@ h1 {
 
   }
 
-  .red{
-    background-color: rgb(255, 0, 0);
-  }
+  .red {
+    background: linear-gradient(180deg, rgb(122, 74, 14) 0%, rgb(245, 62, 113) 50%, rgb(162, 27, 27) 100%);
+  /*BACKGROUND: linear-gradient(Direction,color stop, color2 stop, color3 stop, ....)*/
+    box-shadow: 0 0 20px 0 rgba(83, 14, 14, 0.8);
+}
 
   .yellow{
     background-color: rgb(255, 255, 0);
   }
 
   .green{
-    background-color: rgb(0, 127, 0);
+    background: linear-gradient(180deg, #55680D, #71F53E, #116C31);
+    box-shadow: 0 0 20px 0 #3B7E20CC;
   }
 
   .cyan{
     background-color: rgb(0, 255, 255);
   }
 
-  .blue{
-    background-color: rgb(0, 0, 255);
+  .blue {
+    background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
+    box-shadow: 0 0 20px 0 hsla(223, 59%, 31%, 0.8);
   }
 
   .magenta{
     background-color: rgb(255, 0, 255);
   }
 
-  .container {
-    background-color: rgb(255, 255, 255);
-    padding: 10px 0px;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 5px;
-    border-color: black;
-    margin: auto 35%;
+  .cap {
+    width: 60px;
+    height: 25px;
   }
+
+  .sleeve {
+    width: 110px;
+    height: 25px;
+    /* background-color: white;
+    opacity: 0.5; */ /* This is one way of adding a sleeve*/
+    background-color: rgba(255, 255, 255, 0.5);
+    border-left: 10px double rgba(0, 0, 0, 0.75);
+  }
+
+  .cap, .sleeve {
+    display: inline-block;
+  }
+
